4496 ndmpd handles wrongly EOM and EOF conditions Reviewed by: Albert Lee <trisk@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>