usr/src/cmd/ndmpd/ndmp/ndmpd_mover.c
@@ -37,6 +37,7 @@
  */
 /* Copyright (c) 2007, The Storage Networking Industry Association. */
 /* Copyright (c) 1996, 1997 PDC, Network Appliance. All Rights Reserved */
+/* Copyright 2014 Nexenta Systems, Inc.  All rights reserved. */
 
 #include <sys/ioctl.h>
 #include <sys/types.h>
@@ -62,7 +63,6 @@
 
 static int create_listen_socket_v2(ndmpd_session_t *session, ulong_t *addr,
     ushort_t *port);
-static int tape_write(ndmpd_session_t *session, char *data, ssize_t length);
 static int tape_read(ndmpd_session_t *session, char *data);
 static int change_tape(ndmpd_session_t *session);
 static int discard_data(ndmpd_session_t *session, ulong_t length);
@@ -1354,30 +1354,6 @@ ndmpd_mover_connect_v4(ndmp_connection_t *connection, void *body)
  */
 
 /*
- * ndmpd_write_eom
- *
- * Write end-of-media magic string.  This is called after hitting the LEOT.
- */
-void
-ndmpd_write_eom(int fd)
-{
-	int n;
-
-	(void) ndmp_mtioctl(fd, MTWEOF, 1);
-	n = write(fd, NDMP_EOM_MAGIC, strlen(NDMP_EOM_MAGIC));
-
-	NDMP_LOG(LOG_DEBUG, "%d EOM bytes wrote", n);
-	(void) ndmp_mtioctl(fd, MTWEOF, 1);
-
-	/*
-	 * Rewind to the previous file since the last two files are used
-	 * as the indicator for logical EOM.
-	 */
-	(void) ndmp_mtioctl(fd, MTBSF, 2);
-}
-
-
-/*
  * ndmpd_local_write
  *
  * Writes data to the mover.
@@ -1413,7 +1389,7 @@ ndmpd_local_write(ndmpd_session_t *session, char *data, ulong_t length)
 		    0, session->ns_mover.md_record_size -
 		    session->ns_mover.md_w_index);
 
-		n = tape_write(session, session->ns_mover.md_buf,
+		n = mover_tape_write_v3(session, session->ns_mover.md_buf,
 		    session->ns_mover.md_record_size);
 		if (n <= 0) {
 			ndmpd_mover_error(session,
@@ -1439,7 +1415,7 @@ ndmpd_local_write(ndmpd_session_t *session, char *data, ulong_t length)
 		 */
 		if (session->ns_mover.md_w_index == 0 &&
 		    length - count >= session->ns_mover.md_record_size) {
-			n = tape_write(session, &data[count],
+			n = mover_tape_write_v3(session, &data[count],
 			    session->ns_mover.md_record_size);
 			if (n <= 0) {
 				ndmpd_mover_error(session,
@@ -1469,9 +1445,10 @@ ndmpd_local_write(ndmpd_session_t *session, char *data, ulong_t length)
 		/* Write the buffer if its full */
 		if (session->ns_mover.md_w_index ==
 		    session->ns_mover.md_record_size) {
-			n = tape_write(session, session->ns_mover.md_buf,
+			n = mover_tape_write_v3(session,
+			    session->ns_mover.md_buf,
 			    session->ns_mover.md_record_size);
-			if (n < 0) {
+			if (n <= 0) {
 				ndmpd_mover_error(session,
 				    (n == 0 ? NDMP_MOVER_HALT_ABORTED :
 				    NDMP_MOVER_HALT_INTERNAL_ERROR));
@@ -2279,99 +2256,6 @@ accept_connection(void *cookie, int fd, ulong_t mode)
 }
 
 /*
- * tape_write
- *
- * Writes a data record to tape. Detects and handles EOT conditions.
- *
- * Parameters:
- *   session (input) - session pointer.
- *   data    (input) - data to be written.
- *   length  (input) - length of data to be written.
- *
- * Returns:
- *    0 - operation aborted by client.
- *   -1 - error.
- *   otherwise - number of bytes written.
- */
-static int
-tape_write(ndmpd_session_t *session, char *data, ssize_t length)
-{
-	ssize_t n;
-	int err;
-
-	for (; ; ) {
-		/*
-		 * Refer to the comment at the top of ndmpd_tape.c file for
-		 * Mammoth2 tape drives.
-		 */
-		if (session->ns_tape.td_eom_seen) {
-			NDMP_LOG(LOG_DEBUG, "eom_seen");
-			session->ns_tape.td_eom_seen = FALSE;
-			/*
-			 * End of media reached.
-			 * Notify client and wait for the client to
-			 * either abort the operation or continue the
-			 * operation after changing the tape.
-			 */
-			NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
-			    ++ndmp_log_msg_id,
-			    "End of tape reached. Load next tape.\n");
-
-			err = change_tape(session);
-
-			/* Operation aborted or connection terminated? */
-			if (err < 0)
-				return (-1);
-
-			continue;
-		}
-
-		n = write(session->ns_tape.td_fd, data, length);
-		if (n < 0) {
-			NDMP_LOG(LOG_ERR, "Tape write error: %m.");
-			return (-1);
-		}
-		NS_ADD(wtape, n);
-
-		if (n == 0 || n != length) {
-			if (n != 0) {
-				NDMP_LOG(LOG_DEBUG, "LEOT n: %d", n);
-
-				NDMP_LOG(LOG_DEBUG, "Backup one record");
-				(void) ndmp_mtioctl(session->ns_tape.td_fd,
-				    MTBSR, 1);
-
-				/* setting logical EOM */
-				ndmpd_write_eom(session->ns_tape.td_fd);
-			}
-
-			/*
-			 * End of media reached.
-			 * Notify client and wait for the client to
-			 * either abort the operation or continue the
-			 * operation after changing the tape.
-			 */
-			NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
-			    ++ndmp_log_msg_id,
-			    "End of tape reached. Load next tape.\n");
-
-			err = change_tape(session);
-
-			/* Operation aborted or connection terminated? */
-			if (err < 0)
-				return (-1);
-
-			/* Retry the write to the new tape. */
-			continue;
-		}
-
-		session->ns_tape.td_record_count++;
-		return (n);
-	}
-}
-
-
-/*
  * tape_read
  *
  * Reads a data record from tape. Detects and handles EOT conditions.
@@ -3143,7 +3027,8 @@ mover_tape_write_one_buf(ndmpd_session_t *session, tlm_buffer_t *buf)
 	    buf->tb_full, buf->tb_eot, buf->tb_eof, buf->tb_errno,
 	    buf->tb_buffer_size, buf->tb_buffer_data);
 
-	n = tape_write(session, buf->tb_buffer_data, buf->tb_buffer_size);
+	n = mover_tape_write_v3(session, buf->tb_buffer_data,
+	    buf->tb_buffer_size);
 
 	NDMP_LOG(LOG_DEBUG, "n: %d", n);
 
@@ -3668,37 +3553,9 @@ static int
 mover_tape_write_v3(ndmpd_session_t *session, char *data, ssize_t length)
 {
 	ssize_t n;
-	int err;
+	ssize_t count = length;
 
-	for (; ; ) {
-		/*
-		 * Refer to the comment at the top of ndmpd_tape.c file for
-		 * Mammoth2 tape drives.
-		 */
-		if (session->ns_tape.td_eom_seen) {
-			NDMP_LOG(LOG_DEBUG, "eom_seen");
-
-			session->ns_tape.td_eom_seen = FALSE;
-			/*
-			 * End of media reached.
-			 * Notify client and wait for the client to
-			 * either abort the operation or continue the
-			 * operation after changing the tape.
-			 */
-			NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
-			    ++ndmp_log_msg_id,
-			    "End of tape reached. Load next tape");
-
-			err = mover_pause_v3(session, NDMP_MOVER_PAUSE_EOM);
-
-			/* Operation aborted or connection terminated? */
-			if (err < 0)
-				return (-1);
-
-			/* Retry the write to the new tape. */
-			continue;
-		}
-
+	while (count > 0) {
 		/*
 		 * Enforce mover window on write.
 		 */
@@ -3707,57 +3564,49 @@ mover_tape_write_v3(ndmpd_session_t *session, char *data, ssize_t length)
 		    session->ns_mover.md_window_length) {
 			NDMP_LOG(LOG_DEBUG, "MOVER_PAUSE_EOW");
 
-			err = mover_pause_v3(session, NDMP_MOVER_PAUSE_EOW);
-			/* Operation aborted or connection terminated? */
-			if (err < 0)
+			if (mover_pause_v3(session, NDMP_MOVER_PAUSE_EOW) < 0)
+				/* Operation aborted or connection terminated */
 				return (-1);
 
 		}
 
-		n = write(session->ns_tape.td_fd, data, length);
+		n = write(session->ns_tape.td_fd, data, count);
 		if (n < 0) {
 			NDMP_LOG(LOG_ERR, "Tape write error: %m.");
 			return (-1);
+		} else if (n > 0) {
+			NS_ADD(wtape, n);
+			count -= n;
+			data += n;
+			session->ns_tape.td_record_count++;
 		}
-		NS_ADD(wtape, n);
 
-		if (n == 0 || n != length) {
-			if (n != 0) {
-				/*
-				 * Backup one record since the record
-				 * hits the EOM.
-				 */
-				NDMP_LOG(LOG_DEBUG, "Back up one record");
-				(void) ndmp_mtioctl(session->ns_tape.td_fd,
-				    MTBSR, 1);
+		/* EOM handling */
+		if (count > 0) {
+			struct mtget mtstatus;
 
-				/* setting logical EOM */
-				ndmpd_write_eom(session->ns_tape.td_fd);
-			}
+			(void) ioctl(session->ns_tape.td_fd, MTIOCGET,
+			    &mtstatus);
+			NDMP_LOG(LOG_DEBUG, "EOM detected (%d written bytes, "
+			    "mover record %d, file #%d, block #%d)", n,
+			    session->ns_tape.td_record_count,
+			    mtstatus.mt_fileno, mtstatus.mt_blkno);
 
 			/*
-			 * End of media reached.
-			 * Notify client and wait for the client to
-			 * either abort the operation or continue the
-			 * operation after changing the tape.
+			 * Notify the client to either abort the operation
+			 * or change the tape.
 			 */
 			NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
 			    ++ndmp_log_msg_id,
 			    "End of tape reached. Load next tape");
 
-			err = mover_pause_v3(session, NDMP_MOVER_PAUSE_EOM);
-
-			/* Operation aborted or connection terminated? */
-			if (err < 0)
+			if (mover_pause_v3(session, NDMP_MOVER_PAUSE_EOM) < 0)
+				/* Operation aborted or connection terminated */
 				return (-1);
-
-			/* Retry the write to the new tape. */
-			continue;
 		}
-
-		session->ns_tape.td_record_count++;
-		return (n);
 	}
+
+	return (length);
 }
 
 
@@ -3904,7 +3753,7 @@ ndmpd_local_write_v3(ndmpd_session_t *session, char *data, ulong_t length)
 			n = mover_tape_write_v3(session,
 			    session->ns_mover.md_buf,
 			    session->ns_mover.md_record_size);
-			if (n < 0) {
+			if (n <= 0) {
 				ndmpd_mover_error(session,
 				    (n == 0 ?  NDMP_MOVER_HALT_ABORTED :
 				    NDMP_MOVER_HALT_MEDIA_ERROR));
@@ -4017,59 +3866,84 @@ mover_data_read_v3(void *cookie, int fd, ulong_t mode)
 static int
 mover_tape_read_v3(ndmpd_session_t *session, char *data)
 {
+	int pause_reason;
 	ssize_t	 n;
 	int err;
 	int count;
 
 	count = session->ns_mover.md_record_size;
-	for (; ; ) {
+	while (count > 0) {
+		pause_reason = NDMP_MOVER_PAUSE_NA;
+
 		n = read(session->ns_tape.td_fd, data, count);
 		if (n < 0) {
-			NDMP_LOG(LOG_ERR, "Tape read error: %m.");
-			return (TAPE_READ_ERR);
-		}
-		NS_ADD(rtape, n);
-
-		if (n == 0) {
+			/*
+			 * If at beginning of file and read fails with EIO,
+			 * then it's repeated attempt to read at EOT.
+			 */
+			if (errno == EIO && tape_is_at_bof(session)) {
+				NDMP_LOG(LOG_DEBUG, "Repeated read at EOT");
+				pause_reason = NDMP_MOVER_PAUSE_EOM;
+				NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
+				    ++ndmp_log_msg_id,
+				    "End of tape reached. Load next tape");
+			}
+			/*
+			 * According to NDMPv4 spec preferred error code when
+			 * trying to read from blank tape is NDMP_EOM_ERR.
+			 */
+			else if (errno == EIO && tape_is_at_bot(session)) {
+				NDMP_LOG(LOG_ERR,
+				    "Blank tape detected, returning EOM");
+				NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
+				    ++ndmp_log_msg_id,
+				    "Blank tape. Load another tape");
+				pause_reason = NDMP_MOVER_PAUSE_EOM;
+			} else {
+				NDMP_LOG(LOG_ERR, "Tape read error: %m.");
+				return (TAPE_READ_ERR);
+			}
+		} else if (n > 0) {
+			NS_ADD(rtape, n);
+			data += n;
+			count -= n;
+			session->ns_tape.td_record_count++;
+		} else {
 			if (!is_writer_running_v3(session))
 				return (TAPE_NO_WRITER_ERR);
 
 			/*
-			 * End of media reached.
-			 * Notify client and wait for the client to
-			 * either abort the data operation or continue the
-			 * operation after changing the tape.
+			 * End of file or media reached. Notify client and
+			 * wait for the client to either abort the data
+			 * operation or continue the operation after changing
+			 * the tape.
 			 */
-			NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
-			    ++ndmp_log_msg_id,
-			    "End of tape reached. Load next tape");
+			if (tape_is_at_bof(session)) {
+				NDMP_LOG(LOG_DEBUG, "EOT detected");
+				pause_reason = NDMP_MOVER_PAUSE_EOM;
+				NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
+				    ++ndmp_log_msg_id, "End of medium reached");
+			} else {
+				NDMP_LOG(LOG_DEBUG, "EOF detected");
+				/* reposition the tape to BOT side of FM */
+				fm_dance(session);
+				pause_reason = NDMP_MOVER_PAUSE_EOF;
+				NDMP_APILOG((void*)session, NDMP_LOG_NORMAL,
+				    ++ndmp_log_msg_id, "End of file reached.");
+			}
+		}
 
-			err = mover_pause_v3(session, NDMP_MOVER_PAUSE_EOF);
+		if (pause_reason != NDMP_MOVER_PAUSE_NA) {
+			err = mover_pause_v3(session, pause_reason);
 
 			/* Operation aborted or connection terminated? */
 			if (err < 0) {
-				/*
-				 * Back up one record if it's read but not
-				 * used.
-				 */
-				if (count != session->ns_mover.md_record_size)
-					(void) ndmp_mtioctl(
-					    session->ns_tape.td_fd, MTBSR, 1);
 				return (0);
 			}
-
-			/* Retry the read from the new tape. */
-			continue;
-		}
-
-		data += n;
-		count -= n;
-		if (count <= 0) {
-			session->ns_mover.md_record_num++;
-			session->ns_tape.td_record_count++;
-			return (n);
+			/* Retry the read from new location */
 		}
 	}
+	return (session->ns_mover.md_record_size);
 }
 
 
@@ -4168,6 +4042,7 @@ mover_data_write_v3(void *cookie, int fd, ulong_t mode)
 		}
 
 		session->ns_mover.md_w_index = n;
+		session->ns_mover.md_record_num++;
 	}
 
 	/*
@@ -4540,6 +4415,7 @@ ndmpd_local_read_v3(ndmpd_session_t *session, char *data, ulong_t length)
 			count += n;
 			session->ns_mover.md_bytes_left_to_read -= n;
 			session->ns_mover.md_position += n;
+			session->ns_mover.md_record_num++;
 			continue;
 		}
 
@@ -4557,6 +4433,7 @@ ndmpd_local_read_v3(ndmpd_session_t *session, char *data, ulong_t length)
 
 		session->ns_mover.md_w_index = n;
 		session->ns_mover.md_r_index = 0;
+		session->ns_mover.md_record_num++;
 
 		NDMP_LOG(LOG_DEBUG, "n: %d", n);
 
